--- a/0.0.1
+++ b/0.0.1
@@ -12,15 +12,13 @@ void perestanovka(double* &array, int &size) {
 
 bool read (istream & stream, double* &array, int &size) {
     bool res = true;
-    int realsize = 0;
     for (int i=0; i < size; i++) {
         if (!(stream >> array[i])) {
             res = false;
             break;
         }
-        else realsize++;
     }
-    if (realsize > size-1) {
+    if (!(stream.eof())) {
         cout << "Error";
         exit(0);
     }
