--- a/0.0.5
+++ b/0.0.5
@@ -70,7 +70,7 @@ void spiralsdvig(int ** &matrix, unsigned int rows, unsigned int columns, int sd
 		float *array = new float[a];
 		plus = 0;
 		// использвуя похожий принцип считывания каждой внешней спирали записываем ее в одномерный массив
-		for (int j = n; j < columns - n; j++) {
+		for (unsigned int j = n; j < columns - n; j++) {
 			if (k > rows * columns) {
 				break;
 			}
@@ -80,7 +80,7 @@ void spiralsdvig(int ** &matrix, unsigned int rows, unsigned int columns, int sd
 				k++;
 			}
 		}
-		for (int i = m + 1; i < rows - m; i++) {
+		for (unsigned int i = m + 1; i < rows - m; i++) {
 			if (k > rows * columns) {
 				break;
 			}
@@ -116,21 +116,21 @@ void spiralsdvig(int ** &matrix, unsigned int rows, unsigned int columns, int sd
 		//write1(cout, array, a); cout << endl;  для самопроверки
 		plus = 0;
 		//Теперь необходимо записать элементы в матрицу с нужным сдвигом:
-		for (int j = n; j < columns - n; j++) {
-				matrix[m][j] = array[plus];
-				plus++;
+		for (unsigned int j = n; j < columns - n; j++) {
+			matrix[m][j] = array[plus];
+			plus++;
 		}
-		for (int i = m + 1; i < rows - m; i++) {
-				matrix[i][columns - 1 - n] = array[plus];
-				plus++;
+		for (unsigned int i = m + 1; i < rows - m; i++) {
+			matrix[i][columns - 1 - n] = array[plus];
+			plus++;
 		}
-		for (int j = columns - 2 - n; j > n - 1; j--) {		
-				matrix[rows - 1 - m][j] = array[plus];
-				plus++;
+		for (int j = columns - 2 - n; j > n - 1; j--) {
+			matrix[rows - 1 - m][j] = array[plus];
+			plus++;
 		}
 		for (int i = rows - 2 - m; i > m; i--) {
-				matrix[i][n] = array[plus];
-				plus++;
+			matrix[i][n] = array[plus];
+			plus++;
 		}
 		n++;
 		m++;
