--- a/0.0.4
+++ b/0.0.4
@@ -94,4 +94,8 @@ int main() {
 	}
 	spiral(matrix, rows, columns);
 	write(matrix, rows, columns);
+	for (unsigned int i = 0; i < rows; i++) {
+		delete[] matrix[i];
+	}
+	delete[] matrix;
 }
