--- a/0.0.1
+++ b/0.0.1
@@ -50,5 +50,6 @@ int main() {
     else {
         cout << "An error has occured while reading numbers from line";
     }
+    //Очистка памяти
     delete[] array;
 }
