--- a/0.0.2
+++ b/0.0.2
@@ -63,5 +63,6 @@ int main() {
     else {
         cout << "An error has occured while reading numbers from line";
     }
+    //Очистка памяти
     delete[] array;
 }
